--- a/health_web/src/main/webapp/WEB-INF/web.xml
+++ b/health_web/src/main/webapp/WEB-INF/web.xml
@@ -37,15 +37,15 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-    <!--委派过滤器，用于整合其他框架-->
-    <filter>
-        <!--整合spring security时，此过滤器的名称固定springSecurityFilterChain-->
-        <filter-name>springSecurityFilterChain</filter-name>
-        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>springSecurityFilterChain</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
+    <!--&lt;!&ndash;委派过滤器，用于整合其他框架&ndash;&gt;-->
+    <!--<filter>-->
+        <!--&lt;!&ndash;整合spring security时，此过滤器的名称固定springSecurityFilterChain&ndash;&gt;-->
+        <!--<filter-name>springSecurityFilterChain</filter-name>-->
+        <!--<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>-->
+    <!--</filter>-->
+    <!--<filter-mapping>-->
+        <!--<filter-name>springSecurityFilterChain</filter-name>-->
+        <!--<url-pattern>/*</url-pattern>-->
+    <!--</filter-mapping>-->
 
 </web-app>
